eslint update: use plugin:vue/vue3-recommended

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "vite build",
         "preview": "vite preview",
         "lint": "eslint --ext .js,.vue ./src",
+        "lint:fix": "eslint --fix --ext .js,.vue ./src",
         "tier:check": "prettier --check 'src/**/*'",
         "tier:write": "prettier --write 'src/**/*'"
     },
