--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-vue": "^4.1.0",
-        "autoprefixer": "^10.4.14",
+        "@tailwindcss/postcss": "^4.1.11",
+        "@vitejs/plugin-vue": "^6.0.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.10.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.6",
-        "tailwindcss": "^3.2.7",
-        "vite": "^4.2.1"
+        "tailwindcss": "^4.1.11",
+        "vite": "^7.0.0"
     }
 }
